[workspace]
members = ["broadcast-common", "dvb-common", "dvb-si", "dvb-t2mi", "dvb-bbframe", "dvb-conformance", "dvb-tools", "media-doctor", "multimux", "scte35-splice", "dvb-scte35", "dvb-stream", "mpeg-pes", "dvb-pes", "dvb-subtitle", "mpeg-ps", "scte104", "cc-data", "dvb-cc", "dvb-ci", "st291", "ule", "dvb-ule", "dvb-simulcrypt", "mp4-emsg", "dvb-emsg", "dvb-vbi", "dvb-flute", "dvb-ci-runtime", "timed-metadata", "mpeg-ts", "ts-fix", "transmux", "rtsp-runtime", "srt-runtime", "rtp-packet", "rtcp-packet", "st12-1", "st337", "rdd29", "st377-1"]
exclude = ["fuzz", "demo", "bindings/python", "bindings/transmux-py"]
resolver = "2"

[workspace.package]
authors = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishloa/rust-broadcast"
rust-version = "1.86"
