[workspace]

[package]
name         = "acap-multimux"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.86"
license      = "MIT OR Apache-2.0"
description  = "Axis ACAP app: on-camera VDO capture -> LL-HLS origin (built on the multimux library)."
repository   = "https://github.com/fishloa/rust-broadcast"
publish      = false

[lib]
path = "src/lib.rs"

[[bin]]
name              = "acap-multimux"
path              = "src/bin/acap-multimux.rs"
required-features = ["device"]

[dependencies]
multimux  = "0.3"
transmux  = "0.18"
tokio     = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "sync"] }
axum      = "0.7"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log       = "0.4"

# device-only (ACAP SDK Docker): acap-rs crates, git-pinned (unpublished 0.0.0).
# fishloa/acap-rs fork of upstream rev 8e58acb (branch `fw11-vdo-compat`) with two
# additive commits: (1) drop the fw12-only VDO_ERROR_NO_VIDEO diagnostic arm so
# `vdo` compiles against BOTH the firmware-11 SDK 1.15.1 and firmware-12 SDK 12.1.0
# sysroots (upstream 8e58acb only builds against the fw12 VDO API); (2) add
# StreamBuilder::gop_length to force a fixed key-frame interval (dynamic-GOP /
# Zipstream cameras otherwise emit SPS/PPS too sparsely to find in a bounded scan).
vdo          = { git = "https://github.com/fishloa/acap-rs", rev = "3c513f92bf3dc2e6d1dbb1e3d5c00c0c294a6a69", optional = true }
axparameter  = { git = "https://github.com/fishloa/acap-rs", rev = "3c513f92bf3dc2e6d1dbb1e3d5c00c0c294a6a69", optional = true }
acap-logging = { git = "https://github.com/fishloa/acap-rs", rev = "3c513f92bf3dc2e6d1dbb1e3d5c00c0c294a6a69", optional = true }

[features]
default = []
# `device` pulls the ACAP-only crates + enables the VdoSource + the bin. It
# ONLY builds inside the Axis ACAP Native SDK sysroot (vdo-sys needs
# pkg-config `vdo`). Host builds omit it and compile just the pure `convert`
# lib + its tests.
device = ["dep:vdo", "dep:axparameter", "dep:acap-logging"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
