[package]
name    = "cc-data"
version = "0.2.1"
edition = "2024"
description = "Closed-caption cc_data() carriage (CEA-608/708), per ETSI TS 101 154 Table B.9."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "closed-caption", "cea-708", "cea-608", "cc-data"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"
exclude = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
thiserror  = { version = "2", default-features = false }
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std", "decode"]
# `std` links the standard library. Without it the crate is `#![no_std]` and
# needs only `alloc`.
std = ["broadcast-common/std", "thiserror/std"]
serde = ["dep:serde"]
# `decode` adds the CEA-608/708 caption-decode layer (Cea608Decoder /
# Cea708Decoder + the caption screen/window model) on top of the cc_data()
# carriage. Additive, `no_std` + `alloc`.
decode = []

[[example]]
name = "decode_cea608"
required-features = ["decode"]

[[example]]
name = "decode_cea708"
required-features = ["decode"]
