[package]
name        = "dvb-demo"
version     = "0.1.0"
edition     = "2024"
description = "WASM browser demo for dvb-si — drag-and-drop .ts parser"
publish     = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dvb-si       = { path = "../dvb-si",  features = ["ts", "serde", "chrono"] }
mpeg-ts      = { path = "../mpeg-ts", version = "0.1", default-features = false }
wasm-bindgen = "0.2"
serde_json   = "1.0"
serde        = { version = "1", features = ["derive"] }
