[package]
name        = "dvb-demo"
version     = "0.1.0"
edition     = "2024"
description = "WASM browser demo for dvb-si — drag-and-drop .ts parser"
publish     = false

# `demo` is excluded from the workspace root's `exclude` list and already
# carries its own independent Cargo.lock; make that explicit so Cargo always
# treats this directory as its own (virtual) workspace root, regardless of
# how it's checked out on disk (e.g. nested inside another workspace-bearing
# ancestor directory, as under a git worktree).
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
dvb-si           = { path = "../dvb-si",           features = ["ts", "serde", "chrono"] }
mpeg-ts          = { path = "../mpeg-ts",          version = "0.2", default-features = false }
dvb-conformance  = { path = "../dvb-conformance",  version = "8" }
scte35-splice    = { path = "../scte35-splice",    version = "1" }
mpeg-pes         = { path = "../mpeg-pes",         version = "0.2" }
wasm-bindgen     = "0.2"
serde_json       = "1.0"
serde            = { version = "1", features = ["derive"] }
