[package]
name    = "dvb-cc"
version = "0.2.1"
edition = "2024"
description = "Deprecated shim — use cc-data instead. Closed-caption cc_data() carriage (CEA-608/708), per ETSI TS 101 154 Table B.9."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "closed-caption", "cea-708", "cea-608", "cc-data"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cc-data = { path = "../cc-data", version = "0.3", default-features = false }

[features]
default = ["std", "decode"]
std     = ["cc-data/std"]
serde   = ["cc-data/serde"]
decode  = ["cc-data/decode"]
