[package]
name    = "dvb-ci-runtime"
version = "0.10.1"
edition = "2021"
description = "Pure-Rust EN 50221 DVB Common Interface driver runtime — device I/O, TPDU/SPDU poll loop, and resource state machines over the dvb-ci codecs."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "common-interface", "en50221", "cam", "conditional-access"]
categories = ["multimedia", "hardware-support", "api-bindings"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.81"
exclude = ["docs/**", "tests/fixtures/**"]

[[bin]]
name = "ci-probe"
required-features = ["linux"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dvb-ci     = { path = "../dvb-ci", version = "0.5" }
dvb-si     = { path = "../dvb-si", version = "8", default-features = false }
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
thiserror  = { version = "2" }
libc       = { version = "0.2", optional = true }
clap       = { version = "4.5", optional = true, features = ["derive"] }

[features]
default = []
# `linux` adds the `/dev/dvb/adapterN/caM` CaDevice + the `ci-probe` CLI
# (Linux-only; pulls `libc` for the DVB CA ioctls and `clap` for the CLI). The
# portable sans-IO core needs none of it.
linux = ["dep:libc", "dep:clap"]
