[package]
name    = "dvb-ci"
version = "0.6.0"
edition = "2024"
description = "DVB Common Interface (EN 50221) — APDU/resource objects, session/transport PDUs, and a CA_PMT builder from a dvb-si PMT."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "common-interface", "ci", "en50221", "cam"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"
exclude = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "9", default-features = false }
dvb-si     = { path = "../dvb-si", version = "9", default-features = false }
thiserror  = { version = "2", default-features = false }
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = ["broadcast-common/std", "dvb-si/std", "thiserror/std"]
serde = ["dep:serde"]
