[package]
name         = "dvb-common"
version      = "8.1.0"
edition      = "2024"
description  = "DEPRECATED: renamed to `broadcast-common`. This crate re-exports it."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "mpeg", "broadcast", "crc", "parser"]
categories   = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std     = ["broadcast-common/std"]
chrono  = ["broadcast-common/chrono"]

[dependencies]
broadcast-common = { path = "../broadcast-common", version = "8", default-features = false }
