[package]
name    = "dvb-pes"
version = "0.1.2"
edition = "2021"
description = "DEPRECATED — renamed to `mpeg-pes`. PES depacketization + PTS/DTS, ISO/IEC 13818-1 §2.4.3."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["pes", "mpeg-ts", "pts", "broadcast", "mpeg"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-broadcast"
readme       = "README.md"
rust-version = "1.85"
exclude = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mpeg-pes = { path = "../mpeg-pes", version = "0.1", default-features = false }

[features]
default = ["std"]
std     = ["mpeg-pes/std"]
serde   = ["mpeg-pes/serde"]
