[package]
name         = "dvb-scte35"
version      = "7.9.1"
edition      = "2024"
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
repository   = "https://github.com/fishloa/rust-broadcast"
rust-version = "1.86"
description  = "DEPRECATED: renamed to `scte35-splice`. This crate re-exports it."
keywords     = ["scte35", "splice", "ad-insertion", "mpeg", "broadcast"]
categories   = ["parser-implementations", "multimedia"]
readme       = "README.md"
exclude      = ["docs/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
scte35-splice = { path = "../scte35-splice", version = "1", default-features = false }

[features]
default = ["std", "serde"]
std   = ["scte35-splice/std"]
serde = ["scte35-splice/serde"]
