[package]
name    = "dvb-smpte2038"
version = "0.1.1"
edition = "2021"
description = "Deprecated shim — use the `smpte2038` crate instead."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["smpte", "anc", "vanc", "mpeg-ts", "broadcast"]
categories = ["parser-implementations", "multimedia", "no-std"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
smpte2038 = { path = "../smpte2038", version = "0.1", default-features = false }

[features]
default = ["std"]
std   = ["smpte2038/std"]
serde = ["smpte2038/serde"]
